--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "spatie/laravel-query-builder": "^6.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.23",
+        "fakerphp/faker": "*",
         "laravel/boost": "^2.0",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
